instagnam-deployment.yaml
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: apigateway
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      app: instagnam
#      service: apigateway
#  template:
#    metadata:
#      labels:
#        app: instagnam
#        service: apigateway
#    spec:
#      containers:
#        - name: asw-instagnam-apigateway
#          image: adelloste/instagnam-apigateway-kube:2020.0.0.1
#          ports:
#            - containerPort: 8080
#
#---
apiVersion: v1
kind: Service
metadata:
  name: ricette-db
spec:
  ports:
    - port: 3306
  selector:
    app: instagnam
    service: ricette-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ricette-db
spec:
  selector:
    matchLabels:
      app: instagnam
      service: ricette-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: instagnam
        service: ricette-db
    spec:
      containers:
        - image: mysql:5.7
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ricette
spec:
  replicas: 2
  selector:
    matchLabels:
      app: instagnam
      service: ricette
  template:
    metadata:
      labels:
        app: instagnam
        service: ricette
    spec:
      containers:
        - name: asw-instagnam-ricette
          image: adelloste/instagnam-ricette-kube:2020.0.0.2
          ports:
            - containerPort: 8080
#          readinessProbe:
#            httpGet:
#              path: /actuator/health
#              port: 8080
#            initialDelaySeconds: 10
#            periodSeconds: 10

#---
#kind: Service
#apiVersion: v1
#metadata:
#  name: apigateway
#spec:
#  selector:
#    app: instagnam
#    service: apigateway
#  type: NodePort
#  ports:
#    - protocol: TCP
#      port: 8080
#      targetPort: 8080

---
kind: Service
apiVersion: v1
metadata:
  name: ricette
spec:
  selector:
    app: instagnam
    service: ricette
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: instagnam
spec:
  rules:
    - host: instagnam
      http:
        paths:
          - path: /
            backend:
              serviceName: apigateway
              servicePort: 8080


---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  labels:
    app: instagnam
    service: zookeeper
spec:
  ports:
    - protocol: TCP
      port: 2181
      targetPort: 2181
  selector:
    app: instagnam
    service: zookeeper
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  labels:
    app: instagnam
    service: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: instagnam
      service: zookeeper
  template:
    metadata:
      labels:
        app: instagnam
        service: zookeeper
    spec:
      containers:
        - image: wurstmeister/zookeeper
          name: asw-zookeeper
          ports:
            - containerPort: 2181
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  labels:
    app: instagnam
    service: kafka
spec:
  ports:
    - protocol: TCP
      port: 9092
      targetPort: 9092
  selector:
    app: instagnam
    service: kafka
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  labels:
    app: instagnam
    service: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: instagnam
      service: kafka
  template:
    metadata:
      labels:
        app: instagnam
        service: kafka
    spec:
      containers:
        - image: wurstmeister/kafka
          name: asw-kafka
          ports:
            - containerPort: 9092
